[package]
authors = ["Rikard Anglerud <rikard@anglerud.com>"]
name = "hootie"
version = "0.5.0"
description = """
Terminal viewer of Alerta alerts.
"""
homepage = "https://github.com/anglerud/hootie"
repository = "https://github.com/anglerud/hootie"
readme = "README.md"
keywords = ["alerta", "alerting"]
categories = ["command-line-interface"]
license = "GPL-3.0"
edition = "2018"
exclude = [
    "fake_alerta/*"
]

[badges]
travis-ci = { repository = "anglerud/hootie" }

[dependencies]
failure = "0.1.8"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = "1.0.114"
serde_derive = "1.0.114"
structopt = "0.3.16"
structopt-derive = "0.4.9"
termion = "1.5.5"
