[package]
authors = ["Rikard Anglerud <rikard@anglerud.com>"]
name = "hootie"
version = "0.5.0"
description = """
Terminal viewer of Alerta alerts.
"""
homepage = "https://github.com/anglerud/hootie"
repository = "https://github.com/anglerud/hootie"
readme = "README.md"
keywords = ["alerta", "alerting"]
categories = ["command-line-interface"]
license = "GPL-3.0"
edition = "2018"
exclude = [
    "fake_alerta/*"
]

# Build script is required for `auditable-build`
build = "build.rs"

[badges]
travis-ci = { repository = "anglerud/hootie" }

[dependencies]
auditable = "0.1"
color-eyre = "0.6.1"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
structopt = "0.3.26"
structopt-derive = "0.4.18"
termion = "1.5.6"


[build-dependencies]
auditable-build = "0.1"
