[tool.poetry]
name = "fake_alerta"
version = "1.0.0"
description = "Minimal Alerta stub for testing"
authors = ["Rikard Anglerud <rikard@anglerud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
